--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -5,6 +5,10 @@
 
   &__sidebar {
     height: 90vh;
+    position: fixed;
+    top: 10;
+    left: 0;
+    bottom: -10;
   }
 
   &__column {
@@ -15,9 +19,36 @@
     margin-right: 1.3rem;
     margin-top: 1.5rem;
     height: fit-content;
+    padding-left: 260px;
   }
 }
 
 ul {
   padding: 0;
 }
+
+// .projects {
+//   display: flex;
+//   height: 100vh;
+// }
+
+// .projects__sidebar {
+//   width: 250px; /* Adjust width as needed */
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   bottom: 0;
+//   background-color: #fff; /* Optional: Add background color */
+//   overflow-y: auto; /* Enable vertical scrolling */
+//   border-right: 1px solid #ccc; /* Optional: Add border */
+// }
+
+// .projects__column {
+//   flex: 1;
+//   padding-left: 260px; /* Adjust padding to accommodate the fixed sidebar width */
+//   overflow-y: auto; /* Enable vertical scrolling */
+// }
+
+// .projects__column--wrapper {
+//   padding-top: 20px; /* Optional: Add padding to avoid content under the fixed sidebar */
+// }
